--- a/aero523_proj2/rep/q5/q5.tex
+++ b/aero523_proj2/rep/q5/q5.tex
@@ -12,7 +12,7 @@ In the final section, I will vary the angle of attack as well as performing adap
     \label{fig:aoa_ATPR}
 \end{figure}
 
-Shown above in Figure \ref{fig:aoa_ATPR}, is the effect of varying the angle of attack on ATPR output. \textcolor{red}{Discuss \ldots}. Looking to Table \ref{tab:ATPR_alpha}, below for a Python print out of the values shown above for more accuracy.
+Shown above in Figure \ref{fig:aoa_ATPR}, is the effect of varying the angle of attack on ATPR output. In this analysis there is not a significant difference in the ATPR output while varying the angle of attack but there is a difference nonetheless. This difference in ATPR is causes from the flow hitting different incident angles along the contour of the nozzle inlet resulting in different flow patterns within the nozzle. Looking to Table \ref{tab:ATPR_alpha}, below for a Python print out of the values shown above for more accuracy.
 
 \begin{table}[h]
     \centering
@@ -64,7 +64,7 @@ Shown above in Figure \ref{fig:aoa_ATPR}, is the effect of varying the angle of 
     \label{fig:mach_fields}
 \end{figure}
 
-\paragraph{Effect on Mach Field from Varying Angle of Attack} Shown above in Figure \ref{fig:mach_fields} are the Mach fields for varying angles of attack. \textcolor{red}{Discussion \ldots}
+\paragraph{Effect on Mach Field from Varying Angle of Attack} Shown above in Figure \ref{fig:mach_fields} are the Mach fields for varying angles of attack. As shown above, there is not a large difference between the angle of attack configurations, but there are minor differences that can be spotted along the interior of the engine inlet. This is caused from the angle of attack hitting different incident angles and changing the flow pattern.
 
 \pagebreak
 \begin{figure}[h]
@@ -105,6 +105,6 @@ Shown above in Figure \ref{fig:aoa_ATPR}, is the effect of varying the angle of 
     \label{fig:pt_fields}
 \end{figure}
 
-\paragraph{Effect on Total Pressure Field from Varying Angle of Attack} Shown above in Figure \ref{fig:pt_fields} are the total pressure fields for varying angles of attack. \textcolor{red}{Discussion \ldots}
+\paragraph{Effect on Total Pressure Field from Varying Angle of Attack} Shown above in Figure \ref{fig:pt_fields} are the total pressure fields for varying angles of attack. In this analysis, there is not a large difference (at least not as much as the Mach field), which alters the total pressure within the nozzle. However, the most notable difference will be the total pressure below the engine cause by a larger stagnation of pressure due to the increased angle of attack.
 
 
