--- a/aero523_proj2/rep/q4/q4.tex
+++ b/aero523_proj2/rep/q4/q4.tex
@@ -57,7 +57,7 @@ In this section, I will implement the Mach jumps into the code to refine the mes
     \label{fig:adapted_mach}
 \end{figure}
 
-\paragraph{Finest Mesh Field Plot of Mach Number} Shown above in Figure \ref{fig:adapted_mach}, is the Mach field for the most refined mesh after 5 adaptive iterations. Comparing the results from this refined mesh to that in Figure \ref{fig:mach_mesh0} shows \textcolor{red}{what \ldots}
+\paragraph{Finest Mesh Field Plot of Mach Number} Shown above in Figure \ref{fig:adapted_mach}, is the Mach field for the most refined mesh after 5 adaptive iterations. Comparing the results from this refined mesh to that in Figure \ref{fig:mach_mesh0} shows more refinement resolution to the mach number throughout the inlet of the engine and the shock train within the engine.
 
 \pagebreak
 \begin{figure}[h]
@@ -67,7 +67,7 @@ In this section, I will implement the Mach jumps into the code to refine the mes
     \label{fig:adapted_pt}
 \end{figure}
 
-\paragraph{Finest Mesh Field Plot of Total Pressure} Shown above in Figure \ref{fig:adapted_pt}, is the total pressure field for the most refined mesh after 5 adaptive iterations. Comparing the results from this refined mesh to that in Figure \ref{fig:pt_mesh0} shows \textcolor{red}{what \ldots}
+\paragraph{Finest Mesh Field Plot of Total Pressure} Shown above in Figure \ref{fig:adapted_pt}, is the total pressure field for the most refined mesh after 5 adaptive iterations. Comparing the results from this refined mesh to that in Figure \ref{fig:pt_mesh0} shows better qualitatively how the total pressure decreases throughout the nozzle towards the exit of the engine.
 
 \pagebreak
 \subsubsection{Adapted Mesh ATPR Convergence}
@@ -78,5 +78,5 @@ In this section, I will implement the Mach jumps into the code to refine the mes
     \label{fig:adapted_ATPR}
 \end{figure}
 
-Shown above in Figure \ref{fig:adapted_ATPR}, is the ATPR output versus the number of cells and its effect on the convergence of the ATPR. \textcolor{red}{Discuss \ldots}
+Shown above in Figure \ref{fig:adapted_ATPR}, is the ATPR output versus the number of cells and its effect on the convergence of the ATPR. As shown above, the ATPR output will converge towards an approximated solution fairly fast specifically reaching the approximated solution after the 2\textsuperscript{nd} or 3\textsuperscript{rd} iteration. Increasing the number of cells can aid in the resolution of the solution, but at the cost of longer run times.
 
