--- a/aero523_proj2/rep/q5/q5.tex
+++ b/aero523_proj2/rep/q5/q5.tex
@@ -18,7 +18,7 @@ Shown above in Figure \ref{fig:aoa_ATPR}, is the effect of varying the angle of 
     \centering
     \caption[ATPR Versus Angle of Attack]{ATPR versus angle of attack $\alpha$.}
     \label{tab:ATPR_alpha}
-    \begin{tabular}{l|l}
+    \begin{tabular}{c|l}
         $\alpha$ & ATPR\\ \hline\hline
         \input{rep/q5/atpr_out}
     \end{tabular}
