--- a/aero523_proj2/ref.bib
+++ b/aero523_proj2/ref.bib
@@ -12,3 +12,11 @@
     title = "Roe Flux Differencing Scheme: The Approximate Riemann Problem",
     url = "http://chimeracfd.com/programming/gryphon/fluxroe.html"
 }
+
+@misc{notes:CCW_princeton,
+  author       = "Robert Sedgewik and Kevin Wayne",
+  title        = "Geometric Primitives",
+  year         = "2016",
+  month = "December",
+  institution = "Princeton"
+}
